--- a/changelog.txt
+++ b/changelog.txt
@@ -1,5 +1,17 @@
 CHANGELOG:
 
+14 des 2005  (minor RELEASE 0.41)
+	jumps and jumpsRj show values in realtime in progressBar
+
+	repair_sub_events repairs also interval runs
+
+	cannot make 3.5 jumps (last tc will be deleted)
+	also cannot select 3.5 jumps in jump extra
+	fixed when finish button is pressed and no event was done
+
+	minor: decimal numbers by default to 3 (milliseconds)
+	minor: clean weight representation in treeviewjump add
+
 7 des 2005
 	repair_sub_events (reactive jumps) finished!
 	notebook changes for some menu events
@@ -27,7 +39,7 @@ CHANGELOG:
 	if there are problems for accessing to /dev/ttyS0, now changes to
 	'simulated' automatically. Future: show a errorWindow
 
-30 nov 2005
+30 nov 2005 (RELEASE 0.4)
 	fixed bug in printed report (some persons doesn't shown, and order was
 	not correct)
 		
