--- a/changelog.txt
+++ b/changelog.txt
@@ -1,5 +1,8 @@
 CHANGELOG:
 
+3 feb 2005
+	fixed changing of port in preferences and activating chonopic
+
 2 feb 2005 (minor minor RELEASE 0.44a)
 	created cmjPlusPotency statistic and graph. Added files: src/stats/cmjPlusPotency.cs, src/stats/graphs/cmjPlusPotency.cs
 	
