--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-04-29  Funda Wang  <fundawang@linux.net.cn>
+
+	* zh_CN.po: Added Simplified Chinese translation.
+
 2006-04-29  Raphael Higino  <raphaelh@cvs.gnome.org>
 
 	* ChangeLog: Added this file.
