--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-04-30  Daniel Nylander  <po@danielnylander.se>
+
+	* sv.po: Added initial Swedish translation.
+
 2006-04-29  Funda Wang  <fundawang@linux.net.cn>
 
 	* zh_CN.po: Added Simplified Chinese translation.
